--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,31 @@ footer {
   padding-top: 45px;
   padding-left: 10px;
 }
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 8px;
+}
+.weather-forecast-date {
+  text-align: center;
+  font-size: 20px;
+  line-height: 22px;
+  margin-bottom: 8px;
+}
+.weather-forecast-icon {
+  text-align: center;
+  font-size: 36px;
+}
+.weather-forecast-temperatures {
+  text-align: center;
+  color: #f06371;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+.weather-forecast-temperature {
+  padding: 0 10px;
+}
 .tangerine-bold {
   font-family: "Tangerine", cursive;
   font-weight: 700;
