--- a/src/index.css
+++ b/src/index.css
@@ -104,8 +104,10 @@ footer {
   margin-bottom: 8px;
 }
 .weather-forecast-icon {
-  text-align: center;
-  font-size: 36px;
+  width: 72px;
+  height: 72px;
+  display: block;
+  margin: 0 auto;
 }
 .weather-forecast-temperatures {
   text-align: center;
